<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="day1_image">day1_image</string>
	<string name="wave_symbol">~</string>
	<string name="tomorrow">明天</string>
	<string name="after_tomorrow">后天</string>
	<string name="after_after_tomorrow">大后天</string>
</resources>
